# fagia

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  docker-mysql.yaml
Fagia-jenkins/: docker-compose.yml
entity/: Cargo.toml
entity/src/: aliment_per_donation.rs  aliments.rs  benefactor.rs  beneficiary.rs  credentials.rs  donation.rs  donator.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250322_001132_create_table_users.rs  m20250323_041446_create_table_donator.rs  m20250323_044314_create_table_credentials.rs  m20250323_045440_create_table_benefactor.rs  m20250323_045440_create_table_beneficiary.rs  m20250324_041504_create_table_aliments.rs  m20250324_042935_create_table_donation.rs  m20250324_044202_create_table_aliment_per_donation.rs
src/: main.rs
src/routes/: account.rs  aliments.rs  beneficiary_donation.rs  donation.rs  mod.rs  profile.rs  test.rs
src/routes/handlers/: account_handler.rs  aliment_handler.rs  donation_handler.rs  mod.rs  profile_handler.rs  test_handlers.rs
src/routes/handlers/dto_model/: account_dto.rs  aliment_dto.rs  donation_dto.rs  mod.rs  profile_dto.rs
src/routes/middlewares/: auth_middleware.rs  role_middleware.rs
src/utils/: app_state.rs  constants.rs  jwt.rs
