[package]
name = "FAGIA"
version = "0.1.0"
edition = "2024"

[dependencies]

entity = { path = "entity" }
migration = { path = "migration" } 

serde = { version = "1.0.218", features = ["derive"] }
sea-orm = { version = "1.1.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

actix-web = "4.10.2"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.7"
lazy_static = "1.5.0"
sha256 = "1.6.0"
jsonwebtoken = "9.3.1"
actix-web-grants = "4.1.2"
actix-cors = "0.7.1"